Added short about us te

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/img/favicon.png">
   <title>24</title>
   <link href="css/index.css" rel="stylesheet">
+  <link href="css/aboutUs.css" rel="stylesheet">
   <link rel="stylesheet" href="css/navbarFooter.css">
 </head>
 
@@ -26,11 +27,9 @@
     </div>
     <div id="contain">
       <div id="info">
-        <span>Hello There!gariomjvofvmidfovisiofoifoifgoifsvsvnoifvonfv</span>
+        <h1>About Us</h1>
         <br>
-        <span>roijfeosfoijsfagfgjofsjoi[sfoijfsoijfsvsojifvjoivfjfvnjkfsvjfsvs</span>
-        <br>
-        <span>oijcsdojidsfjosdjosdjocvsnjkcsvnjcvjnkfvknjvfkjfvnkjfvnjkvfjkvfjnvfnjkfv</span>
+        <span>Launched in 2022, MILC is a team of four BCIT students that formed to create an application people would love. We aim to help stimulate minds while making fun accesible. Follow us on our journey to create a fun arithmetic application that can be played by people of all ages and abilities.</span>
       </div>
     </div>
   </div>
