--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           <div id="solutionBox" onclick="playAgain()"><p id="solutionLine"></p></div>
         </div>
         <div id="buttonContainer">
-          <input type="button" id="button1" value="b1">
-          <input type="button" id="button2" value="b2">
-          <input type="button" id="button3" value="b3">
-          <input type="button" id="button4" value="b4">
-          <input type="button" id="button5" value="b5">
-          <input type="button" id="button6" value="b6">
+          <input type="button" id="button1"/>
+          <input type="button" id="button2"/>
+          <input type="button" id="button3"/>
+          <input type="button" id="button4"/>
+          <input type="button" id="button5"/>
+          <input type="button" id="button6"/>
 
           <input type="button" value="+" id="plus"/>
           <input type="button" value="-" id="minus"/>
