css for admin dash

--- a/passRecov.html
+++ b/passRecov.html
@@ -17,6 +17,7 @@
           <a id="dropdownButton" onclick="displayDropdown()" href="">Menu</a>
           <div id="menu">
             <a class="menuItem" href="/about.html">About</a>
+            <a class="menuItem" href="/login.html">Back</a>
           </div>
         </div>
         <a href="/index.html" id="logo">24</a>
